# softbuffer

./: .cspell.json  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  clippy.toml  project-words.txt
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
benches/: buffer.rs  buffer_mut.rs
examples/: animation.rs  drm.rs  fruit.jpg.license  fruit.rs  libxcb.rs  pixel_formats.rs  rectangle.rs  transparency.rs  winit.rs  winit_android.rs  winit_multithread.rs  winit_multithread_android.rs  winit_ohos.rs  winit_tiny_skia.rs  winit_wrong_sized_buffer.rs  zero-sized.rs
examples/raytracing/: camera.rs  game.rs  main.rs  material.rs  objects.rs  ray.rs  vec3.rs  world.rs
examples/util/: mod.rs  winit_app.rs
examples/utils/: winit_app.rs
run-wasm/: Cargo.toml
src/: android.rs  backend_dispatch.rs  backend_interface.rs  cg.rs  convert.rs  error.rs  format.rs  formats.rs  kms.rs  lib.rs  orbital.rs  pixel.rs  util.rs  wayland.rs  web.rs  win32.rs  x11.rs
src/backends/: android.rs  cg.rs  kms.rs  mod.rs  ohos.rs  orbital.rs  uefi.rs  web.rs  win32.rs  x11.rs
src/backends/wayland/: buffer.rs  mod.rs
src/cg/: buffer.rs  mod.rs
src/wayland/: buffer.rs  mod.rs
tests/: present_and_fetch.rs
tools/: fix_msrv.sh
